# hk-datagovhk-mcp-server

./: GEMINI.md  MANIFEST.in  README.md  mcp_client.py  pyproject.toml
docker/: Dockerfile
hkopenai/hk_datagovhk_mcp_server/: __init__.py  __main__.py  server.py
hkopenai/hk_datagovhk_mcp_server/tools/: categories.py  crawler.py  datagovhk_api.py  datagovhk_categories.py  datagovhk_crawler.py  datagovhk_package.py  datagovhk_providers.py  package.py  providers.py
tests/: test_datagovhk_api.py  test_datagovhk_categories.py  test_datagovhk_crawler.py  test_datagovhk_package.py  test_datagovhk_providers.py  test_datagovhk_server.py  test_mcp_client_simulation.py  test_server.py
