[build-system]
requires = [ "setuptools>=42", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "hkopenai.hk_datagovhk_mcp_server"
version = "0.1.0"
description = "Hong Kong DataGovHK MCP Server providing data crawling and processing tools"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
dependencies = [ "fastmcp>=0.1.0", "requests>=2.31.0", "beautifulsoup4>=4.12.3", "pytest>=8.2.0", "pytest-cov>=6.1.1", "modelcontextprotocol",]
[[project.authors]]
name = "Neo Chow"
email = "neo@01man.com"

[project.urls]
repository = "https://github.com/hkopenai/hk-datagovhk-mcp-server.git"

[project.scripts]
hk_datagovhk_mcp_server = "hkopenai.hk_datagovhk_mcp_server.__main__:main"
mcp_client = "mcp_client:main"

[tool.setuptools]
packages = [ "hkopenai.hk_datagovhk_mcp_server",]
include-package-data = true
py-modules = ["mcp_client"]

[tool.bandit]
exclude_dirs = [ "venv", ".venv", "tests",]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = [ "hkopenai",]
